@@ -1,1 +1,1 @@
--+conf.obj -+dbop.obj -+defined.obj -+die.obj -+find.obj -+getdbpath.obj -+gtagsop.obj -+locatestring.obj -+makepath.obj -+path.obj -+gpathop.obj -+strbuf.obj -+strmake.obj -+tab.obj -+test.obj -+token.obj -+usable.obj -+version.obj -+is_unixy.obj -+abs2rel.obj
+-+conf.obj -+dbop.obj -+defined.obj -+die.obj -+find.obj -+getdbpath.obj -+gtagsop.obj -+locatestring.obj -+makepath.obj -+path.obj -+gpathop.obj -+strbuf.obj -+strmake.obj -+tab.obj -+test.obj -+token.obj -+usable.obj -+version.obj -+is_unixy.obj -+abs2rel.obj -+split.obj
